this commmit has some html documention

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2>Contact Us</h2>
         <p>If you have any questions or need assistance, please feel free to contact us:</p>
         <p>Email: contact@openlibrary.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Phone: (+123) 456-7890</p>
     </section>
 
     <!-- Social Media Links Section -->
