have given my website title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <Link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>OPEN LIBRARY</h1>
 
   
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
